--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ html {
 
 body {
     height: 100vh;
-    padding: 0 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(to right, #ffffff 50%, #7867ff 50%);
 }
 
 .main {
@@ -42,6 +42,7 @@ body {
 .card {
     background-color: var(--white);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    margin: 0 2rem;
     padding: 0rem 3rem 1rem 3rem;
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -50,26 +51,6 @@ body {
     -o-border-radius: 20px;
 }
 
-.background{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    z-index: -1;
-
-    .left-bg{
-        background-color: var(--white);
-    }
-    
-    .right-bg{
-        background-color: #7867ff;
-        /* background-color: var(--blue); */
-    }
-
-}
 
 .container {
     display: flex;
