--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ label {
 
 input[type="text"],
 textarea {
+    font-family: 'Poppins', sans-serif;
     color: var(--dark-gray);
     width: 100%;
     padding: 8px 10px;
